[package]
name = "screenpub"
version = "0.1.0"
authors = ["Andrew Newlands <andrew_newlands@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
env_logger = "0.6"
log = "0.4"
flatbuffers = "*"
bytes = "0.4"
mtpng = "0.3"
scrap = "0.5"
amiquip = "0.3"
